tests/Spire.SourceGenerators.Tests/Diagnostic/cases/Detect_NoVariants_Class.cs
//@ should_fail
// SPIRE_DU003: no variants found on class with no nested inheriting classes
using Spire;
namespace TestNs
{
    [DiscriminatedUnion]
    public abstract partial class EmptyClass //~ ERROR
    {
    }
}
